@@ -2,6 +2,8 @@ package de.voidstack_overload.cardgame.application;
 
 import de.voidstack_overload.cardgame.SceneFXML;
 import de.voidstack_overload.cardgame.SceneManager;
+import de.voidstack_overload.cardgame.configuration.SettingData;
+import de.voidstack_overload.cardgame.configuration.Settings;
 import de.voidstack_overload.cardgame.service.RessourceService;
 import javafx.animation.Animation;
 import javafx.animation.KeyFrame;
@@ -32,6 +34,17 @@ public class GameClient extends Application {
 
         primaryStage.setTitle("Durak");
         primaryStage.setResizable(false);
+
+        SettingData data = Settings.INSTANCE.getSettingData();
+
+        SceneManager.setSize(data.width(), data.height());
+        primaryStage.setFullScreen(data.fullscreen());
+
+        sceneManager.setFullScreen(data.fullscreen());
+        sceneManager.resizeStageIfNeeded();
+
+        primaryStage.centerOnScreen();
+
         List<Image> icons = List.of(
                 RessourceService.getImage(RessourceService.ImageKey.CLUB_GLOW_SYMBOL),
                 RessourceService.getImage(RessourceService.ImageKey.DIAMOND_GLOW_SYMBOL),
@@ -39,7 +52,7 @@ public class GameClient extends Application {
                 RessourceService.getImage(RessourceService.ImageKey.SPADE_GLOW_SYMBOL)
         );
 
-        primaryStage.getIcons().setAll(icons.get(0));
+        primaryStage.getIcons().setAll(icons.getFirst());
 
         final int[] idx = {1};
         Timeline cycler = new Timeline(
